v0.6 fix Fixed an element that can't be found